tests/errors/lex_binary.java
public class lex_binary {
	float b = 0b11;
}
